Fix scroll hint shifting left on fade-out

--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,7 @@ nav {
   position: absolute;
   bottom: 2.5rem;
   left: 50%;
-  transform: translateX(-50%);
+  translate: -50% 0;
   display: flex;
   flex-direction: column;
   align-items: center;
